# libtakiyasha

./: CHANGELOG.md  MANIFEST.in  README.md  build-dist.sh  pyproject.toml  requirements.txt  setup.cfg
examples/: dump-ncm-file-with-key.py  dump-ncm-file.py
src/libtakiyasha/: VERSION  __init__.py  _keyutils.py  _miscutils.py  _prototypes.py  _stdciphers.py  _typeutils.py  common.py  exceptions.py  formatprober.py  miscutils.py  ncm.py  pkgmetadata.py  pkgver.py  prototypes.py  sniff.py  standardciphers.py  stdciphers.py  typedefs.py  typeutils.py  utils.py  warns.py
src/libtakiyasha/binaries/ncm/: empty.flac
src/libtakiyasha/kgmvpr/: __init__.py  _kgmvprdataciphers.py  kgmvprdataciphers.py  kgmvprmaskutils.py
src/libtakiyasha/kwm/: __init__.py  _kwmdataciphers.py  kwmdataciphers.py
src/libtakiyasha/ncm/: __init__.py  ciphers.py  crypters.py
src/libtakiyasha/qmc/: __init__.py  _qmcconsts.py  _qmcdataciphers.py  _qmckeyciphers.py  ciphers.py  consts.py  dataciphers.py  keyciphers.py  qmcconsts.py  qmcdataciphers.py  qmckeyciphers.py
src/libtakiyasha/qmc/binaries/: Key256MappingData
src/libtakiyasha/qmc/ciphers/: __init__.py  legacy.py  modern.py
src/libtakiyasha/utils/: __init__.py  typeutils.py
