[project]
name = "libtakiyasha"
dynamic = ["dependencies", "readme", "version"]
authors = [
    { name = "nukemiko" },
]
description = "多种加密方案的 Python 实现"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
keywords = ["unlock", "music", "audio", "qmc", "ncm", "mflac", "mgg", "netease", "163", "qqmusic"]

[project.urls]
"Homepage" = "https://github.com/nukemiko/libtakiyasha"
"Documentation" = "https://github.com/nukemiko/libtakiyasha/wiki"
"Bug Tracker" = "https://github.com/nukemiko/libtakiyasha/issues"
"Releases" = "https://github.com/nukemiko/libtakiyasha/releases"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 46.4.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content-type = 'text/markdown' }
version = { file = "src/libtakiyasha/VERSION" }
