[metadata]
name = libtakiyasha
version = file: src/libtakiyasha/VERSION
description = Python 音乐解密工具库
long_description = file: README.md
long_description_content_type = text/markdown
keywords = unlock, music, audio, qmc, ncm, mflac, mgg, netease, 163, qqmusic
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/nukemiko/libtakiyasha
project_urls =
    Documentation = https://github.com/nukemiko/libtakiyasha
    Source = https://github.com/nukemiko/libtakiyasha
    Releases = https://github.com/nukemiko/libtakiyasha/releases
maintainer = nukemiko
author = nukemiko

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.8
setup_requires =
    setuptools >= 46.4.0
install_requires =
    pyaes

[options.packages.find]
where = src

[options.package_data]
libtakiyasha = VERSION
libtakiyasha.qmc.ciphers = binaries/QMCv1-keystream-segment

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
